fix: add back scrollbar styles

--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -154,3 +154,15 @@ code {
 strong {
   font-weight: 800;
 }
+
+* {
+  &::-webkit-scrollbar {
+    background-color: $background-color;
+    width: 0.5rem;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: darken($color: $background-color, $amount: 10);
+    border-radius: 1rem;
+  }
+}
